# OilDesk-Intern-Assessment

./: .gitignore  pyproject.toml  requirements.txt
solutions/: question1.ipynb  question2.ipynb  question3.ipynb  question4.ipynb  question5.ipynb  test_freq.ipynb
solutions/tables/: performance_metrics.csv  simulation_results.csv  trades_results.csv
